# Airlines

./: .gitignore  Airlines.docx  CMakeLists.txt  README.md  main.cpp
Company/: CMakeLists.txt  Company.cpp  Company.hpp
CrewMember/: CMakeLists.txt  CrewMember.cpp  CrewMember.h  CrewMember.hpp  CrewRole.hpp  CrewStatus.hpp  Role.h
Documentation/: Airlines.docx
Flight/: CMakeLists.txt  Flight.cpp  Flight.h  Flight.hpp  FlightStatus.h  FlightStatus.hpp
OldTests/: CMakeLists.txt  Passenger.test.cpp  Person.test.cpp  Plane.test.cpp
Passenger/: CMakeLists.txt  Passenger.cpp  Passenger.h  Passenger.hpp
Person/: CMakeLists.txt  Gender.hpp  Person.cpp  Person.h  Person.hpp
Plane/: CMakeLists.txt  Plane.cpp  Plane.h  Plane.hpp  PlaneStatus.hpp
Tests/: CMakeLists.txt  Company.tests.cpp  CrewMember.tests.cpp  Flight.tests.cpp  Global.test.cpp  Global.tests.cpp  Passenger.test.cpp  Passenger.tests.cpp  Person.test.cpp  Person.tests.cpp  Plane.test.cpp  Plane.tests.cpp  Tests.h  UnitTest.cpp  Utils.tests.cpp
Utils/: CMakeLists.txt  Comparisons.cpp  CustomErrors.cpp  CustomErrors.h  CustomErrors.hpp  IdGenerator.cpp  IdGenerator.hpp  ListHandler.hpp  SetHandler.hpp  StringHandler.cpp  StringHandler.h  StringHandler.hpp  VectorHandler.cpp  VectorHandler.h  VectorHandler.hpp
